[workspace]
members = [
  "crate/agent",
  "crate/certtool",
  "crate/cli",
  "crate/client",
  "crate/ima",
]
resolver = "2"

[workspace.package]
version = "1.3.4"
edition = "2021"
license = "BUSL-1.1"
license-file = "LICENSE"
repository = "https://github.com/Cosmian/cosmian_vm"

[profile.release]
lto = true
strip = true

[profile.dev]
strip = "debuginfo"
incremental = false

# proc-macros and build-scripts
[profile.dev.build-override]
strip = "debuginfo"
incremental = false

# external dependencies
[profile.dev.package."*"]
opt-level = 0

[workspace.dependencies]
actix-web = { version = "4.8", features = [
  "rustls-0_22",
  "macros",
], default-features = false }
aes-gcm = "0.10"
anyhow = "1.0"
der = { version = "0.7", features = ["alloc", "derive", "flagset", "oid"] }
ecdsa = { version = "0.16", features = ["sha2", "spki"] }
hex = "0.4"
sha1 = "0.10"
sha2 = "0.10"
p256 = { version = "0.13", features = ["arithmetic", "pkcs8"] }
rand = "0.8"
rand_chacha = "0.3"
ratls = { git = "https://github.com/Cosmian/tee-tools", tag = "1.5.0" }
spki = "0.7"
tee_attestation = { git = "https://github.com/Cosmian/tee-tools", tag = "1.5.0" }
tpm_quote = { git = "https://github.com/Cosmian/tee-tools", tag = "1.5.0" }
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
x509-cert = { version = "0.2", features = ["builder", "hazmat"] }
