[package]
name = "cosmian_vm_agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[dependencies]
actix-cors = "0.6"
actix-http = "3"
actix-web = { workspace = true, features = ["http2"] }
actix-web-lab = "0.20"
anyhow = { workspace = true }
awc = "3.5"
const_format = "0.2"
cosmian_vm_client = { path = "../client" }
der = { workspace = true }
ecdsa = { workspace = true }
env_logger = "0.11"
futures = "0.3"
gethostname = "0.4"
hex = { workspace = true }
ima = { path = "../ima" }
num_cpus = "1.16"
p256 = { workspace = true }
pep440 = "0.2"
rand = { workspace = true }
rand_chacha = { workspace = true }
# Important: align the rustls version with actix rustls dependency
rustls = "0.22"
rustls-pemfile = "2.1"
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
spki = { workspace = true }
sysinfo = "0.29"
tee_attestation = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.38.0", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "io-util",
] }
tokio-util = "0.7.11"
toml = "0.8"
tpm_quote = { workspace = true }
tracing = { workspace = true }
tss-esapi = "7.5.1"
uuid = { version = "1.8", features = ["serde", "v4"] }
walkdir = "2.5"
x509-cert = { workspace = true }
