[package]
name = "cosmian_vm_agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cosmian agent running in the confidential VM to forward attestations, collaterals (e.g. root certificates) and measurement log"

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[dependencies]
actix-cors = "0.6"
actix-http = "3"
actix-web = { workspace = true, features = ["http2"] }
actix-web-lab = "0.20"
anyhow = { workspace = true }
awc = "3.5"
const_format = "0.2"
cosmian_vm_client = { path = "../client" }
der = { workspace = true }
ecdsa = { workspace = true }
env_logger = "0.11"
futures = "0.3"
gethostname = "0.4"
hex = { workspace = true }
ima = { path = "../ima" }
num_cpus = "1.16"
p256 = { workspace = true }
pep440 = "0.2"
rand = { workspace = true }
rand_chacha = { workspace = true }
# Important: align the rustls version with actix rustls dependency
rustls = "0.22"
rustls-pemfile = "2.1"
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
spki = { workspace = true }
sysinfo = "0.29"
tee_attestation = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1.38.0", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "io-util",
] }
tokio-util = "0.7.11"
toml = "0.8"
tpm_quote = { workspace = true }
tracing = { workspace = true }
tss-esapi = "7.5.1"
uuid = { version = "1.8", features = ["serde", "v4"] }
walkdir = "2.5"
x509-cert = { workspace = true }

# ------------------------------------------------------------------------------
# START DEBIAN PACKAGING
[package.metadata.deb]
maintainer = "Emmanuel Coste <emmanuel.coste@cosmian.com>"
maintainer-scripts = "../../pkg/deb/"
copyright = "2024, Cosmian Tech SAS <tech@cosmian.com>"
license-file = ["../../LICENSE", "0"]
depends = "tpm2-tools, cryptsetup"
changelog = "../../CHANGELOG.md"
section = "security"
priority = "optional"
assets = [
  [
    "target/release/cosmian_vm_agent",
    "usr/sbin/",
    "500",
  ],
  [
    "/lib/x86_64-linux-gnu/libtdx_attest.so.1.21.100.3",
    "lib/x86_64-linux-gnu/libtdx_attest.so.1",
    "500",
  ],
  [
    "target/release/cosmian_certtool",
    "usr/sbin/",
    "500",
  ],
  [
    "../../pkg/cosmian_fstool",
    "usr/sbin/",
    "500",
  ],
  [
    "../../README.md",
    "usr/share/doc/cosmian_vm_agent/README",
    "644",
  ],
  [
    "../../pkg/agent.toml",
    "etc/cosmian_vm/",
    "400",
  ],
  [
    "../../pkg/mount_luks.sh",
    "root/",
    "700",
  ],
]
systemd-units = [
  { unit-name = "mount_luks", unit-scripts = "../../pkg", enable = true, start = false, restart-after-upgrade = false },
  { unit-name = "cosmian_vm_agent", unit-scripts = "../../pkg", enable = true, start = false, restart-after-upgrade = false },
]

# END DEBIAN PACKAGING
# ------------------------------------------------------------------------------

# ------------------------------------------------------------------------------
# START RPM PACKAGING
[package.metadata.generate-rpm]
license = "BUSL-1.1"
assets = [
  { source = "/lib/x86_64-linux-gnu/libtdx_attest.so.1.21.100.3", dest = "/usr/local/lib/libtdx_attest.so.1", mode = "500" },
  { source = "target/release/cosmian_vm_agent", dest = "/usr/sbin/cosmian_vm_agent", mode = "500" },
  { source = "target/release/cosmian_certtool", dest = "/usr/sbin/cosmian_certtool", mode = "500" },
  { source = "../../pkg/cosmian_fstool", dest = "/usr/sbin/cosmian_fstool", mode = "500" },
  { source = "../../README.md", dest = "/usr/share/doc/cosmian_vm_agent/README", mode = "644", doc = true },
  { source = "../../pkg/agent.toml", dest = "/etc/cosmian_vm/agent.toml", mode = "400" },
  { source = "../../pkg/mount_luks.sh", dest = "/root/mount_luks.sh", mode = "700" },
  { source = "../../pkg/mount_luks.service", dest = "/lib/systemd/system/mount_luks.service", mode = "644" },
  { source = "../../pkg/cosmian_vm_agent.service", dest = "/lib/systemd/system/cosmian_vm_agent.service", mode = "644" },
]
auto-req = "no" # do not try to discover .so dependencies
require-sh = true

[package.metadata.generate-rpm.requires]
tpm2-tools = "*"
cryptsetup = "*"

# END RPM PACKAGING
# ------------------------------------------------------------------------------
