[package]
name = "cosmian_certtool"
version = "0.2.0"
edition = "2021"
license-file = "../../LICENSE.md"
description = "Intel SGX/AMD SEV verification of Remote Attestation based TLS certificate tool"

[[bin]]
name = "cosmian_certtool"
path = "src/main.rs"

[dependencies]
# We use our own acme-lib. We have removed timeout set to ureq
# For a reason we ignore right now, it fails inside the enclave if we set timeout
acme-lib = { git = "https://github.com/algesten/acme-lib", rev = "0803f9190185f9d5fd79de3e91d453c3c08240c9" } # TODO: update after releasing
actix-files = "0.6"
actix-web = { version = "4", features = ["rustls"] }
anyhow = { workspace = true }
clap = { version = "4", default-features = false, features = [
  "cargo",
  "derive",
  "error-context",
  "help",
  "std",
  "string",
  "usage",
] }
cosmian_vm_client = { path = "../client" }
curve25519-dalek = "3.2"
hex = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }
pem-rfc7468 = "0.7"
ratls = { workspace = true }
tee_attestation = { workspace = true }
thiserror = { workspace = true }
