[package]
name = "cosmian_certtool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Intel SGX/AMD SEV verification of Remote Attestation based TLS certificate tool"

[[bin]]
name = "cosmian_certtool"
path = "src/main.rs"

[dependencies]
# We use our own acme-lib. We have removed timeout set to ureq
# For a reason we ignore right now, it fails inside the enclave if we set timeout
acme-lib = "0.9"
actix-files = "0.6"
actix-web = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", default-features = false, features = [
  "cargo",
  "derive",
  "error-context",
  "help",
  "std",
  "string",
  "usage",
] }
curve25519-dalek = "4.1.3"
hex = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }
pem-rfc7468 = { version = "1.0", features = ["alloc"] }
ratls = { workspace = true }
tee_attestation = { workspace = true }
thiserror = { workspace = true }
tls-cert = { workspace = true }
