[package]
name = "cosmian_vm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Cosmian VM CLI"

[[bin]]
name = "cosmian_vm"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4", default-features = false, features = [
  "cargo",
  "derive",
  "error-context",
  "help",
  "std",
  "string",
  "usage",
] }
cosmian_vm_client = { path = "../client" }
hex = { workspace = true }
ima = { path = "../ima" }
rand = "0.8"
serde_json = { workspace = true }
sha2 = { workspace = true }
tee_attestation = { workspace = true }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tpm_quote = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ------------------------------------------------------------------------------
# START DEBIAN PACKAGING
[package.metadata.deb]
maintainer = "Emmanuel Coste <emmanuel.coste@cosmian.com>"
copyright = "2024, Cosmian Tech SAS <tech@cosmian.com>"
license-file = ["../../LICENSE", "0"]
depends = "tpm2-tools"
changelog = "../../CHANGELOG.md"
section = "security"
priority = "optional"
assets = [
  [
    "target/release/cosmian_vm",
    "usr/sbin/",
    "555",
  ],
  [
    "/usr/lib/x86_64-linux-gnu/libtdx_attest.so.1.24.100.2",
    "usr/sbin/libtdx_attest.so.1",
    "555",
  ],
]

# END DEBIAN PACKAGING
# ------------------------------------------------------------------------------

# ------------------------------------------------------------------------------
# START RPM PACKAGING
[package.metadata.generate-rpm]
license = "BUSL-1.1"
assets = [
  { source = "/usr/lib/x86_64-linux-gnu/libtdx_attest.so.1.24.100.2", dest = "/usr/sbin/libtdx_attest.so.1", mode = "555" },
  { source = "target/release/cosmian_vm", dest = "/usr/sbin/cosmian_vm", mode = "555" },
]
auto-req = "no" # do not try to discover .so dependencies
require-sh = true

[package.metadata.generate-rpm.requires]
tpm2-tools = "*"

# END RPM PACKAGING
# ------------------------------------------------------------------------------
