[package]
name = "cosmian_vm_client"
version = "1.0.0"
edition = "2021"
license-file = "../../LICENSE.md"

[dependencies]
base64 = "0.21"
hex = { workspace = true }
http = "0.2"
# Important: align the rustls version with reqwest rustls dependency
reqwest = { version = "0.11.22", features = [
  "json",
  "multipart",
  "native-tls",
  "rustls-tls",
  "stream",
] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
serde = { workspace = true }
tee_attestation = { workspace = true }
thiserror = { workspace = true }
tpm_quote = { workspace = true }
url = "2.2"
webpki-roots = "0.25"
