[package]
name = "cosmian_vm_client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[dependencies]
base64 = "0.22"
hex = { workspace = true }
http = "0.2"
# Important: align the rustls version with reqwest rustls dependency
reqwest = { version = "0.11.27", features = [
  "json",
  "multipart",
  "native-tls",
  "rustls-tls",
  "stream",
] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
serde = { workspace = true }
tee_attestation = { workspace = true }
thiserror = { workspace = true }
tpm_quote = { workspace = true }
url = "2.5"
webpki-roots = "0.25"
