[package]
name = "cosmian_vm_client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# doc test linking as a separate binary is extremely slow
# and is not needed for internal lib
doctest = false

[dependencies]
base64 = "0.22"
hex = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "multipart",
    "query",
    "rustls",
    "stream",
] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
serde = { workspace = true }
tee_attestation = { workspace = true }
thiserror = { workspace = true }
tls-cert = { workspace = true }
tpm_quote = { workspace = true }
url = "2.5"
webpki-roots = "1.0"
