[package]
name = "ima"
version = "0.3.0"
edition = "2021"
license-file = "../../LICENSE.md"
description = "IMA parser"

[dependencies]
bincode = "1.3"
hex = { workspace = true }
serde = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tpm_quote = { workspace = true }
